--- a/static/carrello.html
+++ b/static/carrello.html
@@ -66,21 +66,8 @@ License URI: http://www.themevault.net/license/-->
                             <div class="collapse navbar-collapse text-center" id="myNavbar">
                                 <ul class="nav navbar-nav margin-l">
                                     <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="menu.html">Menu</a></li>
-                                    <li class="dropdown">
-                                        <a data-toggle="dropdown" class="toggle set-pos">
-                                            Pages <i class="fa fa-caret-down" aria-hidden="true"></i>
-                                        </a>
-                                        <div class="dropdown-menu btn-block box-content-menu">
-                                            <ul class="menu">
-                                                <li><a class="dropdown" href="404.html">404 page</a></li>
-                                                <li><a class="dropdown" href="buttons.html">buttons</a></li>
-                                                <li><a class="dropdown" href="grid.html">grid</a></li>
-                                                <li><a class="dropdown" href="tab&accordian.html">tab & accordian</a></li>
-                                                <li><a class="dropdown" href="typography.html">typography</a></li>
-                                                <li><a class="dropdown" href="icons.html">icons</a></li>
-                                            </ul>
-                                        </div>
+                                    <li><a href="index.html">Menu</a></li>
+                                    
 
                                     </li>
                                 </ul>
@@ -88,7 +75,7 @@ License URI: http://www.themevault.net/license/-->
                                     <a href="index.html"><img src="images/Home/logo.png"/></a>
                                 </div>
                                 <ul class="nav navbar-nav navbar-right" id="ul">
-                                    <li><a href="service.html">service</a></li>
+                                  
                                     <li id="idLogin"><a href="Google-Auth-main/views/login.html" id="idA">login</a></li>
                                     <li><a href="contact.html">CONTACT Us</a></li>
 
@@ -158,7 +145,7 @@ data-mdb-toggle="modal"
 data-mdb-target="#exampleModal"
 id="myInput"
 >
-CHECKOUT MODAL
+CHECKOUT 
 </button>
 </div>
 <!-- Button trigger modal -->
