--- a/static/index.html
+++ b/static/index.html
@@ -83,7 +83,7 @@ License URI: http://www.themevault.net/license/-->
                                     <a href="index.html"><img src="images/Home/logo.png"/></a>
                                 </div>
                                 <ul class="nav navbar-nav navbar-right" id="ul">
-                                    <li><a href="service.html">service</a></li>
+                                    <li><a href="service.html"></a></li>
                                     <li id="idLogin"><a href="Google-Auth-main/views/login.html" id="idA">login</a></li>
                                     <li><a href="contact.html">CONTACT Us</a></li>
 
