--- a/static/visOrdini.html
+++ b/static/visOrdini.html
@@ -65,7 +65,7 @@ License URI: http://www.themevault.net/license/-->
                             <div class="collapse navbar-collapse text-center" id="myNavbar">
                                 <ul class="nav navbar-nav margin-l">
                                     <li class="active"><a href="index.html">Home</a></li>
-                                    <li><a href="menu.html">Menu</a></li>
+                                    <li><a href="index.html">Menu</a></li>
                                     <li class="dropdown">
                                         <a data-toggle="dropdown" class="toggle set-pos">
                                             Visualizza <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -82,7 +82,7 @@ License URI: http://www.themevault.net/license/-->
                                     <a href="index.html"><img src="images/Home/logo.png"/></a>
                                 </div>
                                 <ul class="nav navbar-nav navbar-right" id="ul">
-                                    <li><a href="service.html">service</a></li>
+                                    <li><a href="service.html"></a></li>
                                     <li id="idLogin"><a href="Google-Auth-main/views/login.html" id="idA">login</a></li>
                                     <li><a href="contact.html">CONTACT Us</a></li>
 
