--- a/static/index.html
+++ b/static/index.html
@@ -126,7 +126,7 @@ License URI: http://www.themevault.net/license/-->
                     <div class="carousel-caption">
                         <div class="carousel-caption-inner">
                             <h1>ORDINA ORA</h1><br>
-                            <button type="button" class="btn btn-primary btn-lg btn-shadow">MENU</button>
+                            <button type="button" class="btn btn-primary btn-lg btn-shadow"><a href="#menu">MENU</a></button>
                         </div>
                     </div>
                 </div>
